data_engg_support_assistant/k8s/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-engg-support-assistant
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-engg-support-assistant
  template:
    metadata:
      labels:
        app: data-engg-support-assistant
    spec:
      serviceAccountName: cd-serviceaccount
      containers:
        - name: streamlit
          image: ${ECR_REGISTRY_URL}:${IMAGE_TAG}
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true

          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi

          livenessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
