data_engg_support_assistant/k8s/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: data-engg-support-assistant-svc
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: data-engg-support-assistant
spec:
  type: ClusterIP
  ports:
  - port: 8501
    targetPort: 8501
    protocol: TCP
    name: http
  selector:
    app: data-engg-support-assistant
